css/ucb-incident-page.css
.ucb-page-title-wrapper.container-fluid {
  background: #B71C1C;
  color: white;
  padding: 0.25em;
  margin-bottom: 1em;
}

.ucb-page-title.container {
  padding: 0;
}

.ucb-page-title h1 {
  font-size: 2rem;
  margin: 0;
}

.ucb-incident-title-col {
  padding: 1.75em 1em;
}

.ucb-incident-title-container {
  margin-bottom: 1.25em;
}

.ucb-incident-title-col h1 {
  font-size: 1.75rem;
  margin: 0;
}

.ucb-default-frontpage-block {
  display: none;
}

.ucb-incident-container {
  position: relative;
}

.ucb-incident-static-content {
  width: 100%;
}

.ucb-incident-sidebar {
  border: 1px solid #dadada;
  padding: 1.5em;
}

.ucb-incident-event-col {
  padding: 0;
}

.ucb-incident-event-card {
  width: 100%;
  padding: 1em 0;
  margin-bottom: 1em;
  border-bottom: 1px solid #dadada;
}

[v-cloak] {
  display: none;
}

.ucb-incident-cta-section {
  border-bottom: 1px solid #dadada;
  padding-bottom: 1em;
  margin-bottom: 1em;
}

ul.ucb-incident-cta-links {
  list-style: none;
  display: flex;
  padding: 0;
}

ul.incident-list li ul.ucb-incident-cta-links li {
  display: block;
}

ul.ucb-incident-cta-links li {
  margin-right: 1em;
}

.ucb-incident-cta-image-col img {
  max-width: 100%;
  height: auto;
  border-radius: 4px;
}

.ucb-incident-event-body {
  display: inline-block;
  width: 100%;
}

.ucb-incident-event-image img {
  height: auto;
  max-width: 100%;
  border-radius: 4px;
}

.ucb-org-map-embed {
  margin: auto;
  width: auto;
  height: 320px;
  max-width: 450px;
  position: relative;
  border-radius: 4px;
}

span.embed-map-label {
  position: absolute;
  bottom: 0;
  width: 100%;
  background: black;
  text-align: left;
  padding-left: 1em;
  color: #fafafa;
  border-radius: 0 0 4px 4px;
}

.ucb-sidebar {
  margin: 1em 0;
  background: #f2f2f2;
  padding: 1em 0.75em;
  border: 1px solid #dadada;
  border-radius: 4px;
}

h2.ucb-incident-event-title {
  font-size: 1.75rem;
}

.ucb-incident-event-timestamp {
  font-family: "HelveticaNeue", sans-serif;
  font-size: 1.2em;
  font-weight: bolder;
  color: #666;
  padding-bottom: 0.25em;
  text-transform: uppercase;
}

ul.incident-list {
  list-style: none;
  padding: 0;
}

ul.incident-list li {
  display: none;
}

ol.ucb-incident-control-list li {
  display: block;
  margin-right: 0.75rem;
  margin-bottom: 1rem;
}

ul.incident-list li:first-of-type {
  display: block;
}

a.ucb-incident-node-toggle {
  display: flex;
  background: #f2f2f2;
  padding: 0.5rem;
  border-radius: 4px;
  border: 1px solid #8a8a8a;
}

a.ucb-incident-node-toggle:hover {
  box-shadow: 2px 2px 2px rgba(0.2, 0.2, 0.2, 0.2);
}

a.ucb-incident-node-toggle.active {
  background: white;
}

a.ucb-incident-node-toggle.active:hover {
  box-shadow: none;
}

ol.ucb-incident-control-list {
  display: flex;
}

.ucb-incident-event-body img {
  max-width: 50%;
  height: auto;
  border-radius: 4px;
}

.ucb-incident-event-map {
  padding: 0.75em 0;
}

.ucb-incident-event-images {
  padding: 0.75em 0;
}

.ucb-incident-edit-button-container {
  position: absolute;
  right: 1em;
  z-index: 100;
}

a.ucb-incident-edit-button {
  background: #cfcfcf;
  display: block;
  padding: 0.4em 0.4em 0.4em 0.75em;
  border: 1px solid #565a5c;
  border-radius: 5px;
}

article.align-center {
  text-align: center;
}

article.align-right img {
  float: right;
}

article.align-left img {
  float: left;
}

.views-element-container footer {
  margin: 0 -15px;
  padding: 0;
}

.views-element-container footer .container {
  padding: 1em;
}

/* for the collapsed update bodies */
p.ucb-toggle-update-body{
  color: #007bff;
}
p.ucb-toggle-update-body:hover{
  cursor: pointer;
}

/* for the nav */
.alert-page-nav{
  display: flex;
  flex-direction: row-reverse;
  margin-bottom: 20px;
  background: #e7e7e7;
  align-items: bottom;
  justify-content: space-between;
  padding: 10px 10px 0 10px;
  font-size: 85%;
  overflow: hidden;
  border-left: 15px solid white;
}
.alert-page-nav .col-updates {
  background: #fff;
  padding: 10px 20px;
  box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.15);
  display: flex;
  align-items: center;
}
.col-updates > h1{
  font-size: 2em;
  margin: 0px;
}

.alert-page-nav.col-info{
  padding-top: 3px;
}

